[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/gradient_bar.shader" type="Shader" id=1]
[ext_resource path="res://UI/StatDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://multiplayer/ThreatLineDisplay.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/LMROMAN10-REGULAR.OTF"

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/starting_color = Vector3( 0.14, 0.99, 0.21 )
shader_param/ending_color = Vector3( 0.99, 0.11, 0.1 )
shader_param/progression = null
shader_param/reverse = null

[node name="ThreatLineDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1730.0
margin_bottom = -1059.0
rect_min_size = Vector2( 190, 21 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 190.0
margin_bottom = 22.0
rect_min_size = Vector2( 190, 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="meteor_id" type="Label" parent="Panel"]
margin_right = 14.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "11"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power" type="Label" parent="Panel"]
margin_left = 128.0
margin_top = 1.41582
margin_right = 142.0
margin_bottom = 22.4158
custom_fonts/font = SubResource( 2 )
text = "11"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_left" type="Label" parent="Panel"]
margin_left = 154.795
margin_top = 1.41582
margin_right = 186.795
margin_bottom = 22.4158
custom_fonts/font = SubResource( 2 )
text = "12:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatDisplay" parent="Panel" instance=ExtResource( 2 )]
material = SubResource( 3 )
margin_left = 16.0
margin_top = 4.5455
margin_right = 216.0
margin_bottom = 30.5455
rect_scale = Vector2( 0.5, 0.5 )
